erDiagram
    PRODUCTS {
        int id PK
        string name
        string code
        string description
        string barcode
        string primary_uom_code FK
        decimal current_cost
        decimal current_price
        int quantity
        string image_url
        string category_code FK
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    PRICE_HISTORY {
        int id PK
        int product_id FK
        decimal old_price
        decimal new_price
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    COST_HISTORY {
        int id PK
        int product_id FK
        decimal old_cost
        decimal new_cost
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    CATEGORIES {
        int id PK
        string name
        string code
        string description
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    UNIT_OF_MEASURES {
        int id PK
        string name
        string code
        string description
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    SALES {
        int id PK
        string sales_number
        decimal net_amount
        decimal total_amount
        decimal discount_value
        string discount_type
        int customer_id FK
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    SALE_LINES {
        int id PK
        int quantity
        int sale_id FK
        int product_id FK
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    PO_HEADER {
        int id PK
        string po_number
        string po_status
        decimal po_discount
        decimal total_amount
        string notes
        int supplier_id FK
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    PO_LINES {
        int id PK
        int requested_quantity
        int received_quantity
        decimal unit_price
        int po_header_id FK
        int product_id FK
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    PRODUCTS_RETURNS {
        int id PK
        int product_id FK
        int sale_id FK
        int quantity_returned
        string reason
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    CUSTOMERS {
        int id PK
        string name
        string email
        string phone
        string address
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    SUPPLIERS {
        int id PK
        string name
        string contact_name
        string contact_phone
        string email
        string address
        datetime creation_date
        string created_by
        string last_update_by
        datetime last_update_date
    }

    PRODUCTS_SUPPLIERS {
        int product_id FK
        int supplier_id FK
    }

    USER {
        string username PK
        string password
        boolean enabled
    }

    AUTHORITY {
        string username FK
        string authority
    }

    CATEGORIES ||--o{ PRODUCTS: "has many"
    PRODUCTS ||--o{ PRICE_HISTORY: "records price changes"
    PRODUCTS ||--o{ COST_HISTORY: "records cost changes"
    UNIT_OF_MEASURES ||--o{ PRODUCTS: "measured in"
    PRODUCTS ||--o{ SALE_LINES: "sold as"
    SALES ||--o{ SALE_LINES: "contains"
    CUSTOMERS ||--o{ SALES: "makes"
    SUPPLIERS ||--o{ PRODUCTS: "supplies"
    SUPPLIERS ||--o{ PO_HEADER: "receives orders from"
    PO_HEADER ||--o{ PO_LINES: "includes"
    PRODUCTS ||--o{ PO_LINES: "ordered in"
    PRODUCTS ||--o{ PRODUCTS_RETURNS: "returned"
    SALES ||--o{ PRODUCTS_RETURNS: "associated with"
    USER ||--o{ AUTHORITY: "has role"
    PRODUCTS ||--o{ PRODUCTS_SUPPLIERS: ""
    SUPPLIERS ||--o{ PRODUCTS_SUPPLIERS: ""